src/components/reconcile/actions/actions.css
@value acuoGrey from './../../../css-components/colors.css';
@value acuoActionRed from './../../../css-components/colors.css';
@value acuoActionOrange from './../../../css-components/colors.css';
@value acuoActionGreen from './../../../css-components/colors.css';

.vertiCenter{
    display: table;
    height: 100%;
    text-align: center;
}


.actionContainer{
    position: relative;
    margin-top: 10px;
    padding: 0 10px;
    /*border: 1px dotted #c00;*/
}

.actionWrap{
    display: flex;
    align-items: flex-start;
    position: relative;
    width: 100%;
    /*min-height: 100px;*/
    clear: both;
    margin-top: 25px;
    margin-bottom: 50px;
    /*border: 1px dotted #00f;*/
}

.actionWrap .actPanel{
    display: inline-flex;
    /*border: 1px dotted #2b3c4c;*/
}

.actionWrap .actPanel.act_C{
    flex: 1;
    align-items: stretch;
    margin: auto;
    /*border: 1px dotted #2b3c4c;*/
}
.actionWrap .actPanel.act_C .btnWrap{
    margin: 0 auto;
    /*border: 1px dotted #c00;*/
}
.actionWrap .actPanel.act_C .btnWrap .actFig{
    font-size: 24px;
    display: block;
    position: relative;
    text-align: center;
    clear: both;
}

.actTextOrange{
    color: acuoActionOrange;
}

.actTextGreen{
    color: acuoActionGreen;
}

.actTextRed{
    color: acuoActionRed;
}

.actionWrap .actPanel.act_C .btnWrap .actBtn{
    display: block;
    position: relative;
    width: 50px;
    min-height: 20px;
    padding: 8px 12px;
    margin: 10px auto auto auto;
    color: #fff;
    text-align: center;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    cursor: pointer;
}

.actBtnOrange{
    background-color: acuoActionOrange;
}

.actBtnGreen{
    background-color: acuoActionGreen;
}

.actBtnRed{
    background-color: acuoActionRed;
}

.actionWrap .actPanel.act_L,
.actionWrap .actPanel.act_R{
    flex: 4;
}

.actionWrap .actPanel.act_L{
    /*flex: 4;*/
}

.actionWrap .actPanel.act_R{
    /*flex: 4;*/
}


.panel{
    width: 100%;
    display: flex;
    min-height: 365px;
    overflow: auto;
    border:1px solid #dedede;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: 2px 2px 4px 0 #c9c9c9;
    box-shadow: 2px 2px 4px 0 #c9c9c9;
}

.section.left{
    flex:4;
}

.sectionText{
    font-weight: bold;
    margin-top: 12px;
}

.sectionRow{
    display:flex;
    padding:7px 0;
}
.legalEntityContainer{
    color:#9b9b9b;
    text-align: left;
    font-size: 10px;
    padding: 10px;
}

.legalEntity{
    color:#759BBB;
    font: bold 18px Helvetica;
}

.legalEntityDetails{
    /*display: flex;*/
}
.legalEntityDetails div{
    display: inline-block;
    padding-right: 5px;
    font-weight:lighter;
    color:#4a4a4a;
}

.package{
    font:13px Helvetica;
    padding: 0 5px;
}
.package{
    font-weight:bold;
}
.packageRowGrey{
    color:#BCBCBC;
}

.packageRow{
    display: flex;
    padding: 3px 0;
}

.packageLeft{
    display: flex;
    align-content: flex-start;
    flex:3;
    padding: 3px 0;
}
.packageLeft .packageCheckBox{
    /*padding: 3px 4px 3px 10px;*/
}
.packageLeft .packageCheckBox.hide{
    opacity: 0;
    pointer-events: none; /** when the checkbox is hidden, set it unclickable. **/
}
.packageLeft .packageCheckBox.show{
    opacity: 1;
}

.packageRight{
    flex:1;
    padding: 3px 0;
}

.packageLeft div{
    padding-left: 10px;
}


/*--------- 2nd level packageRow -------------*/
.packageLvl2{
    /*display: flex;*/
    padding: 4px 4px 4px 18px;
    /*border: 1px dotted #ccc;*/
}
.packageLvl2.hide{
    display: none;
}
.packageLvl2.show{
    display: block;
}
.expandPackage{
    cursor:pointer;
}

.secondLevelText{
  font-weight:normal;
}
/*----------css for section right starts here--------------------*/

.section.right{
    color: #4a4a4a;
    flex:1;
    border-left: 1px solid #9B9B9B;
    display:flex;
    flex-direction: column;
    align-content: space-between;
    font: 13px Helvetica;
}


.currency{
    color:#9b9b9b;
    text-align: right;
    padding: 10px;
}

/*.viewFxRate .toolTip{visibility: hidden}*/
/*.viewFxRate:hover .toolTip{visibility: visible;}*/

.viewFxRate{
    color:#4A90e2;
    text-align: right;
    font-size: 12px;
    margin-top: 4px;
    cursor: pointer;
}

.viewFxRate .viewFxRateImage{
  padding: 8px 10px;
  display: none;
  text-align: left;
  color: #9b9b9b;
  float: left;
  position: absolute;
  width: 100px;
  -webkit-border-radius: 10px 0 10px 10px;
  border-radius: 10px 0 10px 10px;
  border:1px solid #c9c9c9;
  background-color: #ffffff;
  top: 50px;
}
.viewFxRate:hover .viewFxRateImage{
    display: block;
}


.totalMargin{
    text-align: center;
    margin: auto 0;
    line-height: 30px;
}

.marginValue{
    font: bold 36px Helvetica;
}

.marginUnit{
    font-weight: bold;

}

.tradeDetails{
    color:#4A90e2;
    text-align: center;
    padding: 10px;
    cursor: pointer;
}

